python/testData/inspections/UnresolvedWith.py
<warning descr="Unresolved reference 'with'">with</warning><error descr="End of statement expected"> </error>open("x.txt")<error descr="End of statement expected"> </error><warning descr="Unresolved reference 'as'">as</warning><error descr="End of statement expected"> </error><warning descr="Unresolved reference 'f'">f</warning><error descr="End of statement expected">:</error><EOLError descr="Statement expected, found Py:COLON"></EOLError>
    <error descr="Unexpected indent">d</error>ata = <warning descr="Unresolved reference 'f'">f</warning>.read()